--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^1.1",
-        "doctrine/dbal": "2.5.1"
+        "doctrine/dbal": "2.5.1",
+        "malahierba-lab/chile-rut": "5.1.*"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
